--- a/app/views/experiences/_experience.html.haml
+++ b/app/views/experiences/_experience.html.haml
@@ -1,4 +1,4 @@
-%article.mb-7.text-slate-950.dark:text-white
+%article.mb-12.text-slate-950.dark:text-white
   = render partial: 'experiences/title', locals: { experience: experience }
 
   %h2.mb-3
@@ -12,7 +12,7 @@
 
   - if EXPERIENCE_SKILLS_DISPLAYED
     %div
-      - experience.skill_list.each do |skill|
+      - experience.skill_counts.order(taggings_count: :desc).each do |skill|
 
         %div.float-left.text-xs.border.border-slate-200.py-1.px-2.mr-2.mb-2.text-slate-500
           = skill
