--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -3,7 +3,7 @@
     - unless controller_name == 'home' && action_name == 'index'
       = image_tag "profile_photo.jpeg", class: 'h-12 w-12 rounded-full shadow-xl dark:shadow-gray-800'
 
-  %nav.flex.flex-1.space-x-4.justify-center.text-sm.border.rounded-full.font-medium.shadow-lg.p-2.mb-20.backdrop-blur(class='ring-1 shadow-slate-800/5 ring-slate-900/5 dark:ring-white/10 dark:bg-slate-800/90 dark:text-slate-200')
+  %nav.flex.flex-auto.space-x-4.justify-center.text-sm.border.rounded-full.font-medium.shadow-lg.p-2.mb-20.backdrop-blur(class='ring-1 shadow-slate-800/5 ring-slate-900/5 dark:ring-white/10 dark:bg-slate-800/90 dark:text-slate-200')
     %div
       = link_to 'Home', root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
     - if EXPERIENCES_DISPLAYED
@@ -15,7 +15,9 @@
     - if ABOUT_DISPLAYED
       %div
         = link_to 'About', about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    - if SOURCE_DISPLAYED
-      %div
-        = link_to 'Source', source_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    %div
+      = link_to 'Work With Me', root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+    / - if SOURCE_DISPLAYED
+    /   %div
+    /     = link_to 'Source', source_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
   %div.flex-1
