--- a/app/views/home/sitemap.xml.erb
+++ b/app/views/home/sitemap.xml.erb
@@ -17,7 +17,7 @@
     <lastmod><%= Setting.first.updated_at.strftime("%Y-%m-%d") %></lastmod>
   </url>
   <url>
-    <loc>https://carsoncole.com/about</loc>
+    <loc>https://carsoncole.com/work-with-me</loc>
     <lastmod><%= Setting.first.updated_at.strftime("%Y-%m-%d") %></lastmod>
   </url>
 </urlset>
