--- a/app/views/shared/_nav.html.haml
+++ b/app/views/shared/_nav.html.haml
@@ -12,12 +12,8 @@
     - if PROJECTS_DISPLAYED
       %div
         = link_to 'Projects', projects_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    - if ABOUT_DISPLAYED
+
+    - if WORK_WITH_ME_DISPLAYED
       %div
-        = link_to 'About', about_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    %div
-      = link_to 'Work With Me', root_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
-    / - if SOURCE_DISPLAYED
-    /   %div
-    /     = link_to 'Source', source_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
+        = link_to 'Work With Me', work_with_me_path, class: 'text-slate-800 dark:text-slate-200 hover:text-teal-500 dark:hover:text-slate-850'
   %div.flex-1
