--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -64,11 +64,11 @@
         .mb-3.font-medium.text-sm= f.label :experiences_subheading
         = f.text_area :experiences_subheading, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 3
       .mb-5
-        .mb-3.font-medium.text-sm= f.label :about_headline
-        = f.text_area :about_headline, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 6
+        .mb-3.font-medium.text-sm= f.label :work_with_me_headline
+        = f.text_area :work_with_me_headline, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 6
       .mb-5
-        .mb-3.font-medium.text-sm= f.label :about_subheading
-        = f.text_area :about_subheading, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 3
+        .mb-3.font-medium.text-sm= f.label :work_with_me_subheading
+        = f.text_area :work_with_me_subheading, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 3
       .mb-5
         .mb-3.font-medium.text-sm= f.label :source_headline
         = f.text_area :source_headline, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline', rows: 6
