--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
 
   %body.font-sans.my-8.dark:text-slate-100.bg-slate-50.dark:bg-slate-900
     %div.flex.justify-center
-      %div.bg-white.p-6.md:p-16.lg:p-20.dark:bg-slate-950(class='lg:w-4/5')
+      %div.bg-white.p-6.md:px-16.lg:px-20.dark:bg-slate-950(class='lg:w-4/5')
         %div.mb-7= render 'shared/nav'
 
         = yield
