--- a/app/views/experiences/index.html.haml
+++ b/app/views/experiences/index.html.haml
@@ -7,7 +7,7 @@
 - else
   %div.mb-10 &nbsp;
 
-%div.grid.grid-cols-4.gap-10
+%div.md:grid.md:grid-cols-4.md:gap-10
   %div.col-span-4.md:col-start-1.md:col-span-3
     = render partial: 'experiences/experience', collection: @experiences
 
