--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -1,7 +1,7 @@
 %footer.mt-6
   %div.lg:flex
 
-    %nav.flex.justify-center.md:justify-start.space-x-2.md:space-x-4.p-2.mb-10.md:mb-20(class='dark:bg-slate-800/90')
+    %nav.flex.justify-center.md:justify-start.space-x-2.md:space-x-4.p-2.mb-10.md:mb-20(class='dark:bg-slate-800/90 items-center')
 
       = render 'shared/nav_items'
 
