--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -11,7 +11,7 @@
 
 
 %div.flex.justify-center.mb-12
-  %div.border.border-slate-4.bg-slate-100.p-8
+  %div.border.border-slate-4.bg-slate-100.dark:bg-slate-700.dark:border-slate-500.p-8
     %h2.text-2xl.font-bold.mb-4 Example Hosted Project
     %p.text-sm.mb-5
       CarsonRCole.com uses the
