--- a/app/views/shared/_nav_items.haml
+++ b/app/views/shared/_nav_items.haml
@@ -1,11 +1,11 @@
 %div.text-xs.font-medium.antialiased.tracking-tight
-  = link_to 'Home', root_path, class: controller_name == 'home' && action_name == 'index' ? "text-slate-500 font-bold" : nil
+  = link_to 'Home', root_path, class: controller_name == 'home' && action_name == 'index' ? "text-slate-500 dark:text-slate-300 font-bold" : "dark:text-slate-100"
 - if EXPERIENCES_DISPLAYED
   %div.text-xs.font-medium.antialiased.tracking-tight
-    = link_to 'Experience', experiences_path, class: controller_name == 'experiences' ? "text-slate-500 font-bold" : nil
+    = link_to 'Experience', experiences_path, class: controller_name == 'experiences' ? "text-slate-500 font-bold" : "dark:text-slate-100"
 - if PROJECTS_DISPLAYED
   %div.text-xs.font-medium.antialiased.tracking-tight
-    = link_to 'Projects', projects_path, class: controller_name == 'projects' ? "text-slate-500 font-bold" : nil
+    = link_to 'Projects', projects_path, class: controller_name == 'projects' ? "text-slate-500 font-bold" : "dark:text-slate-100"
 
 - if WORK_WITH_ME_DISPLAYED
   %div.text-xs.font-medium.antialiased.tracking-tight.border-2.rounded.py-1.px-2.border-lime-400.bg-lime-300.align-middle
