--- a/app/views/admin/projects/show.html.haml
+++ b/app/views/admin/projects/show.html.haml
@@ -4,4 +4,6 @@
 
 = link_to 'Edit', edit_admin_project_path(@project)
 \|
+= link_to 'Destroy', admin_project_path(@project), method: :delete, data: { "turbo-method": :delete, confirm: 'Are you sure?' }
+\|
 = link_to 'Back', admin_projects_path
