--- a/app/views/admin/settings/_form.html.haml
+++ b/app/views/admin/settings/_form.html.haml
@@ -24,6 +24,13 @@
         = f.text_field :meta_description, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
       .mb-5
+        .mb-3.font-medium.text-sm= f.label :status
+        = f.select :status, options_for_select(Setting.statuses.map {|k,v| [k.titleize, k]}, @setting.status), class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
+
+
+
+
+      .mb-5
         .mb-3.font-medium.text-sm= f.label :address
         = f.text_field :address, class: 'shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline'
 
