--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,6 +7,13 @@
     = image_tag "profile_photo.jpeg", alt: 'Carson Cole image', class: 'h-40 w-40 lg:h-60 lg:w-60 my-10 ml-0 lg:ml-4 rounded-xl rotate-0 lg:rotate-6 shadow-xl object-scale-down dark:shadow-gray-800'
 
 
+%div(class="mb-8 flex justify-center")
+  %div.text-3xl.py-2.font-bold.bg-lime-800.text-center.rounded-lg(class='w-full md:w-1/2')
+    = link_to work_with_me_path, class: 'text-lime-200 hover:text-white' do
+      = Setting&.first&.status.titleize
+      &#8594
+
+
 
 %div
   %h2.mb-10.text-lg.text-slate-500.max-w-prose
