--- a/app/views/home/work_with_me.html.haml
+++ b/app/views/home/work_with_me.html.haml
@@ -1,5 +1,8 @@
 %h1.text-slate-800.dark:text-slate-100.font-bold.tracking-tight.mb-10.text-4xl.md:text-5xl(class='md:w-4/5')
-  %div.leading-tight.md:leading-tight= Setting.first.work_with_me_headline
+  %div.leading-tight.md:leading-tight
+    = "I am currently"
+    = succeed(".") do
+      = Setting&.first.status
 
 - if Setting.first.work_with_me_subheading.present?
   %h2.text-xl.mb-20.max-w-prose.text-slate-500
