--- a/app/views/shared/_nav_items.haml
+++ b/app/views/shared/_nav_items.haml
@@ -8,7 +8,7 @@
     = link_to 'Projects', projects_path, class: controller_name == 'projects' ? "text-slate-500 font-bold" : "dark:text-slate-100"
 
 %div.text-xs.font-medium.antialiased.tracking-tight
-  = link_to 'Solutions', solutions_path, class: controller_name == 'projects' ? "text-slate-500 font-bold" : "dark:text-slate-100"
+  = link_to 'Solutions', solutions_path, class: controller_name == 'home' && action_name == 'solutions' ? "text-slate-500 font-bold" : "dark:text-slate-100"
 
 
 - if WORK_WITH_ME_DISPLAYED
