--- a/app/views/home/solutions.html.haml
+++ b/app/views/home/solutions.html.haml
@@ -1,22 +1,22 @@
-%div(class='mb-20')
-  %h1(class='text-slate-800 dark:text-slate-100 font-bold tracking-tight leading-tight md:leading-tight text-4xl md:text-5xl mb-5')
-    Finding application solutions.
 
-  %p(class='font-light tracking-tight max-w-prose text-xl text-slate-700 dark:text-slate-100')
-    Example common Ruby on Rails application challenges and the solutions provided.
+%h1(class='text-slate-800 dark:text-slate-100 font-bold tracking-tight mb-10 text-4xl font-display leading-11 md:text-5xl md:leading-13 md:w-4/5')
+  Finding application solutions.
+
+%h2(class='font-light tracking-tight max-w-prose text-xl text-slate-700 dark:text-slate-100 mb-20')
+  Example common Ruby on Rails application challenges and the solutions provided.
 
 
 %div(class='mb-4')
-  %article(class='bg-red-50 py-10 md:py-16 pb-10 px-12 md:px-32 md:mx-36')
+  %article(class='bg-red-50 py-10 md:py-16 pb-10 px-14 md:px-12 lg:px-20 md:mx-36')
     %h1(class='mb-10 md:mb-14 text-3xl font-bold tracking-tight text-center') Upgrading Ruby on Rails.
 
-    %div(class='flex')
+    %div(class='')
       %div
-        %p(class='font-bold text-sm max-w-prose text-slate-800 antialiased mb-6')
+        %p(class='font-bold text-sm text-slate-800 antialiased mb-6')
           Upgrading a Ruby on Rails monolithic application from version 4.3 to 6.0 posed challenges, with rising support issues and hindrance to a front-end overhaul.
-        %p(class='font-light text-sm max-w-prose text-slate-800 antialiased mb-6')
+        %p(class='font-light text-sm text-slate-800 antialiased mb-6')
           Maintaining an up-to-date application is crucial, since it otherwise comes with challenges such as inefficient development time and escalating support costs due to persistent bugs. The need for upgrading was evident, considering the continuous improvements in Ruby on Rails from version 4.3 to, at the time, the most current version of 6.0.
-        %p(class='font-bold text-sm max-w-prose text-slate-800 antialiased mb-7')
+        %p(class='font-bold text-sm text-slate-800 antialiased mb-7')
           To address this challenge, the strategy involved a step-wise approach. The initial phase focused on refactoring the application, removing less-utilized older gems to reduce potential issues during the upgrade. Subsequently, attention shifted to upgrading remaining gems incrementally, addressing test issues along the way, and finally reaching the desired Rails version. This method aimed to ensure a successful upgrade while prioritizing safety and minimizing adverse impacts on the core business.
 
     %div(class='flex justify-center mb-6')
@@ -36,7 +36,7 @@
 
 
 
-%div(class='grid md:grid-cols-2 gap-4 place-content-stretch')
+%div(class='grid md:grid-cols-2 md:gap-4')
   %article(class='bg-gray-900 dark:bg-gray-700 text-white py-16 px-14')
     %h1(class='mb-8 text-3xl font-bold tracking-tight text-center') White labeling a SaaS offering.
 
