tests fixed, all working now including system

--- a/app/views/admin/experiences/_form.html.haml
+++ b/app/views/admin/experiences/_form.html.haml
@@ -10,10 +10,10 @@
     .mb-2= f.label :title
     = f.text_field :title, class: 'form-control'
   .mb-3
-    .mb-2= f.label :employer
+    .mb-2= f.label :name
     = f.text_field :name, class: 'form-control'
   .mb-3
-    .mb-2= f.label :employer_url
+    .mb-2= f.label :url
     = f.text_field :url, class: 'form-control'
   .mb-3
     .mb-2= f.label :location
