--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
 %div.lg:grid.lg:grid-cols-3.gap-6
   %div.col-start-1.col-span-2
-    %h1(class='text-slate-800 dark:text-slate-100 font-bold tracking-tight mb-10 text-4xl leading-11 md:text-5xl md:leading-13')
+    %h1(class='text-slate-800 dark:text-slate-100 font-bold tracking-tight md:mb-10 text-4xl leading-11 md:text-5xl md:leading-13')
       = Setting&.first&.home_headline || 'Home headline'
 
   %div.flex.justify-center.lg:justify-end
