--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -9,4 +9,6 @@
       %div.bg-white.p-20.dark:bg-slate-950(class='lg:w-4/5')
         = render 'admin/shared/admin_nav'
 
+        = render 'admin/shared/flash'
+
         = yield
