--- a/app/views/admin/experiences/show.html.haml
+++ b/app/views/admin/experiences/show.html.haml
@@ -24,4 +24,6 @@
 
 = link_to 'Edit', edit_admin_experience_path(@experience)
 \|
+= link_to 'Destroy', admin_experience_path(@experience), method: :delete, data: { "turbo-method": :delete }
+\|
 = link_to 'Back', admin_experiences_path
