--- a/app/views/projects/index.html.haml
+++ b/app/views/projects/index.html.haml
@@ -1,5 +1,5 @@
 %h1(class='text-slate-800 dark:text-slate-100 font-bold tracking-tight mb-10 text-4xl leading-11 md:text-5xl md:leading-13 md:w-4/5')
-  = Setting.first.projects_headline
+  = Setting.first.projects_headline ||= 'Projects'
 
 - if Setting.first.projects_subheading.present?
   %h2(class='font-light tracking-tight max-w-prose text-xl text-slate-700 dark:text-slate-100 mb-20')
