--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,7 +4,7 @@
 
 @layer base {
   a {
-    @apply text-slate-400 dark:text-slate-200 hover:text-teal-500;
+    @apply text-lime-500 dark:text-lime-200 hover:text-lime-900;
   }
 }
 
