--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -8,14 +8,14 @@
       I've harbored a lifelong enthusiasm for bringing ideas to life. It all started at the age of ten with a roadside candy stand, progressed to selling custom graduation-gift pens during college, and culminated in founding the global bond trading firm DebtTraders. Additionally, I established an investment management firm,
       = succeed(".") do
         = link_to "NUKU", "https://nuku.com"
-      Throughout this diverse journey, my enduring passion for programming has been a constant. Creating web applications for others isn't just a job for me; it's a genuine commitment, from crafting fundraising apps for Scouting
+      Throughout this diverse journey, my enduring passion for programming has been a constant. Creating web applications for others isn't just a job for me; it's a genuine commitment, from crafting fundraising apps for non-profits
       = surround("(", ")") do
         = succeed(", ") do
           = link_to "Tree Recycle", "https://github.com/carsoncole/tree-recycle"
         = link_to "Ecycle", "https://github.com/carsoncole/ecycle"
       to developing an app for my daughter to sell
       = link_to "slime online", "https://github.com/carsoncole/slime-kangaroo"
-      (trying to foster her entreprenurial spirit).
+      (trying to foster her entreprenurial spirit), to engineering multiple corporate apps.
     %p.text-lg.text-slate-700.max-w-prose
       As a seasoned Ruby on Rails full-stack developer, I possess expertise in application design, development, and deployment. Proficient in evaluating both existing and new applications, I thrive in facilitating discussions among stakeholders and playing a pivotal role as a lead engineering contributor in various leadership capacities.
 
