--- a/app/views/home/work_with_me.html.haml
+++ b/app/views/home/work_with_me.html.haml
@@ -12,29 +12,27 @@
 - else
   %div.mb-10 &nbsp;
 
-%div.flex.flex-col.md:flex-row.justify-center.md:justify-evenly
-  %div.border.py-2.px-5.text-center.rounded-xl.hover:bg-slate-500.hover:text-slate-100.mb-5
-    %h2.font-medium
-      = link_to asset_path('resume.pdf'), download: 'resume.pdf', target: '_blank', class: 'hover:text-slate-100' do
-        .inline-block.align-middle Download my resume
-        .inline-block.align-middle.dark:hidden= image_tag 'download.svg', width: '19px', class: 'inline-block align-middle'
+%div(class='flex flex-col mx-auto md:flex-row md:gap-10 tracking-tight max-w-xs md:justify-center md:max-w-full')
+  %div(class='border-2 border-lime-500 py-1 px-7 text-center rounded-lg hover:bg-lime-600 hover:text-grey-800 hover:text-slate-100 bg-lime-100 shadow font-bold md:w-1/3 mb-5')
 
+    = link_to asset_path('resume.pdf'), download: 'resume.pdf', target: '_blank' do
+      .inline-block.align-middle(class='dark:hidden')
+        <svg fill="currentColor" class="w-6 h-6" viewBox="0 0 20 20"><path d="M10.75 2.75a.75.75 0 0 0-1.5 0v8.614L6.295 8.235a.75.75 0 1 0-1.09 1.03l4.25 4.5a.75.75 0 0 0 1.09 0l4.25-4.5a.75.75 0 0 0-1.09-1.03l-2.955 3.129V2.75z"/><path d="M3.5 12.75a.75.75 0 0 0-1.5 0v2.5A2.75 2.75 0 0 0 4.75 18h10.5A2.75 2.75 0 0 0 18 15.25v-2.5a.75.75 0 0 0-1.5 0v2.5c0 .69-.56 1.25-1.25 1.25H4.75c-.69 0-1.25-.56-1.25-1.25v-2.5z"/></svg>
+      .inline-block.align-middle Resume
 
-  %div.align-middle
-    .font-medium
-      - if Setting&.first&.email.present?
-        = link_to Setting&.first&.email, class: 'inline-block align-middle' do
-          %div.mr-2.inline-block
-            = render 'shared/email_svg'
-        = link_to "mailto: #{Setting&.first&.email}", class: 'inline-block' do
-          %div
-            = Setting&.first&.email
-
-    .font-medium
-      - if Setting&.first&.phone.present?
-        %div.mr-2.fill-slate-500.inline-block.align-middle
-          = render 'shared/phone_svg'
-        %div.inline-block
-          = link_to Setting&.first&.phone, "tel:#{Setting&.first&.phone}"
+  %div(class='lg:mt-1 leading-tight text-center')
+    - if Setting&.first&.email.present?
+      = link_to Setting&.first&.email, class: 'inline-block align-middle' do
+        %div.mr-2.inline-block
+          <svg aria-hidden="true" class="h-5 w-5 flex-none fill-slate-500 transition group-hover:fill-teal-500" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M6 5a3 3 0 0 0-3 3v8a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H6Zm.245 2.187a.75.75 0 0 0-.99 1.126l6.25 5.5a.75.75 0 0 0 .99 0l6.25-5.5a.75.75 0 0 0-.99-1.126L12 12.251 6.245 7.187Z"/></svg>
+      = link_to "mailto: #{Setting&.first&.email}", class: 'inline-block' do
+        %div
+          = Setting&.first&.email
+    .clear-both
+    - if Setting&.first&.phone.present?
+      %div.mr-1.fill-slate-500.inline-block.align-middle
+        <svg fill="slate-500" class="w-4 h-4" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M1.5 4.5a3 3 0 0 1 3-3h1.372c.86 0 1.61.586 1.819 1.42l1.105 4.423a1.875 1.875 0 0 1-.694 1.955l-1.293.97c-.135.101-.164.249-.126.352a11.285 11.285 0 0 0 6.697 6.697c.103.038.25.009.352-.126l.97-1.293a1.875 1.875 0 0 1 1.955-.694l4.423 1.105c.834.209 1.42.959 1.42 1.82V19.5a3 3 0 0 1-3 3h-2.25C8.552 22.5 1.5 15.448 1.5 6.75V4.5z" clip-rule="evenodd"/></svg>
+      %div.inline-block
+        = link_to Setting&.first&.phone, "tel:#{Setting&.first&.phone}"
 
 
